--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "scripts": {
     "test:watch": "jest --watch --env=jsdom",
     "test": "jest --env=jsdom",
-    "build": "cross-env NODE_ENV=production babel src -d dist"
+    "build": "cross-env NODE_ENV=production babel --plugins transform-es2015-modules-commonjs src -d dist"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.0",
