Add mock-socket dev-dependencies

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-watch": "^4.0.1",
+    "mock-socket": "^8.0.1",
     "prop-types": "^15.6.2",
     "react-testing-library": "^4.1.2"
   },
