Add integration tests for Ajax
Since the Ajax component is integrated with the axios library, I found
that getting tests that cover that integration is going to be at least a
little important.  Particularly in the case of how the cancellation of
requests works.  It's finicky, but having that visibilty and reasoning
documented is going to be really helpful when the system needs to change
over to the fetch API at some point.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "cross-env NODE_ENV=production babel --plugins transform-es2015-modules-commonjs src -d dist"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
