--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.1",
   "description": "Declarative data providers using socket.io and axios for react applications",
   "main": "dist/index.js",
-  "repository": "https://github.rackspace.com/phil9824/react-network-tools.git",
-  "author": "Philip Capel <Philip.Capel@rackspace.com>",
+  "repository": "https://github.com/pcapel/react-network-tools.git",
+  "author": "Philip Capel <insert.available.name@gmail.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
     "test:watch": "jest --watch --env=jsdom",
     "test": "jest --env=jsdom",
-    "build": "cross-env NODE_ENV=production babel --plugins transform-es2015-modules-commonjs src -d dist"
+    "build": "cross-env NODE_ENV=production babel --plugins transform-es2015-modules-commonjs src -d dist",
+    "docs": "cross-env react-docgen src/Socket/index.js"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.15.0",
@@ -26,16 +27,17 @@
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-watch": "^4.0.1",
+    "jest": "22.4.4",
     "mock-socket": "^8.0.1",
-    "prop-types": "^15.6.2",
+    "react-docgen": "^2.21.0",
     "react-testing-library": "^4.1.2"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
-    "jest": "22.4.4",
     "lodash": "^4.17.10",
     "object-assign": "4.1.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1"
